WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33726
Cleanup: Fix style errors exposed by the patch for
bug #33498
https://bugs.webkit.org/show_bug.cgi?id=33726
Summary
Cleanup: Fix style errors exposed by the patch for bug #33498
Daniel Bates
Reported
2010-01-15 11:03:02 PST
We should fix the style errors found by the style bot with respect to the patch for
bug #33498
.
Attachments
Patch
(21.52 KB, patch)
2010-01-15 11:07 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2010-01-15 11:07:40 PST
Created
attachment 46691
[details]
Patch Moreover, this fixes all the style errors found by check-webkit-style except the use of an underline in the variable name _niflags. We should fix this in a second run through for all the other variables names that contain an underline because there are many. for some reason, check-webkit-style does not catch all the other variables with underlines in their names, see
bug #33724
.
WebKit Review Bot
Comment 2
2010-01-15 11:10:02 PST
Attachment 46691
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/rendering/style/SVGRenderStyle.h:167: _niflags is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1
Eric Seidel (no email)
Comment 3
2010-01-15 11:32:55 PST
Comment on
attachment 46691
[details]
Patch Assuming this is just style cleanup, then r=me.
Adam Barth
Comment 4
2010-01-18 01:49:22 PST
Comment on
attachment 46691
[details]
Patch Seems safe to commit queue.
WebKit Commit Bot
Comment 5
2010-01-18 05:33:49 PST
Comment on
attachment 46691
[details]
Patch Clearing flags on attachment: 46691 Committed
r53402
: <
http://trac.webkit.org/changeset/53402
>
WebKit Commit Bot
Comment 6
2010-01-18 05:33:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug